WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69768
Shrink WebCore::Node on 64-bit.
https://bugs.webkit.org/show_bug.cgi?id=69768
Summary
Shrink WebCore::Node on 64-bit.
Andreas Kling
Reported
2011-10-10 11:10:15 PDT
Let's do this.
Attachments
Proposed patch
(2.89 KB, patch)
2011-10-10 11:11 PDT
,
Andreas Kling
koivisto
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2011-10-10 11:11:05 PDT
Created
attachment 110370
[details]
Proposed patch
WebKit Review Bot
Comment 2
2011-10-10 12:31:29 PDT
Comment on
attachment 110370
[details]
Proposed patch Rejecting
attachment 110370
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: nerNode]': Source/WebCore/dom/Document.h:1424: instantiated from here Source/WebCore/platform/TreeShared.h:128: error: 'WebCore::TreeShared<WebCore::ContainerNode>::m_refCount' will be initialized after Source/WebCore/platform/TreeShared.h:124: error: 'bool WebCore::TreeShared<WebCore::ContainerNode>::m_adoptionIsRequired' Source/WebCore/platform/TreeShared.h:38: error: when initialized here make: *** [out/Debug/obj.target/webcore_bindings/gen/webkit/bindings/V8DerivedSources02.o] Error 1 Full output:
http://queues.webkit.org/results/10015786
Andreas Kling
Comment 3
2011-10-11 02:30:48 PDT
Committed
r97137
: <
http://trac.webkit.org/changeset/97137
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug