Shrink WebCore::Node on 64-bit. https://bugs.webkit.org/show_bug.cgi?id=69768

Reviewed by Antti Koivisto.

Rearrange TreeShared and Node members so that the node flags fall
into the padding at the end of TreeShared on 64-bit, reducing the
size of Node (and all subclasses) by 8 bytes.

* dom/Document.h:
(WebCore::Node::Node):
* dom/Node.h:
* platform/TreeShared.h:
(WebCore::TreeShared::TreeShared):


Canonical link: https://commits.webkit.org/85872@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97137 268f45cc-cd09-0410-ab3c-d52691b4dbfc