Source/WebCore/platform/TreeShared.h
@@ -36,8 +36,8 @@ template<typename T> class TreeShared {
     WTF_MAKE_NONCOPYABLE(TreeShared);
 public:
     TreeShared()
-        : m_refCount(1)
-        , m_parent(0)
+        : m_parent(0)
+        , m_refCount(1)
 #ifndef NDEBUG
         , m_adoptionIsRequired(true)
 #endif
@@ -123,8 +123,9 @@ private:
     friend void adopted<>(TreeShared<T>*);
 #endif
 
-    int m_refCount;
     T* m_parent;
+    int m_refCount;
+
 #ifndef NDEBUG
     bool m_adoptionIsRequired;
 #endif
